crates/obj-rs/tests/derive_compile_fail/bad_version_negative.rs
use serde::{Deserialize, Serialize};

#[derive(Serialize, Deserialize, obj::Document)]
#[obj(version = -1)]
struct BadNegVersion {
    x: u32,
}

fn main() {}
